Fix ParticipationForm in another way which does not break the form behavior

--- a/src/client/less/_react.less
+++ b/src/client/less/_react.less
@@ -6,16 +6,9 @@
 }
 
 .boolean-with-inner-html {
-  display: inline;
-  input[type="checkbox"] {
-    margin-left: 0;
-  }
-  label {
+  display: block;
+  label.control-label {
     display: none;
-  }
-
-  .customlabel {
-    display: inline-block;
   }
 }
 
